add fallback message

--- a/app/views/blessings/index.html.erb
+++ b/app/views/blessings/index.html.erb
@@ -1,4 +1,4 @@
-<% if @blessings.find_each do |blessing |%>
+<% if @blessings.each do |blessing |%>
   <%= blessing.nickname %><br>
   <%= image_tag blessing.photo %><br>
   <%= blessing.content %>
