done dont blame me

--- a/app/assets/stylesheets/blessings.scss
+++ b/app/assets/stylesheets/blessings.scss
@@ -1,3 +1,64 @@
 // Place all the styles related to the blessings controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import "bootstrap-sprockets";
+@import "bootstrap";
+body {
+  background: #eee;
+  margin: 0;
+  font-size: 14px;
+}
+.wrap {
+ padding: 30px 60px;
+}
+
+input:focus, textarea:focus {
+  border: 1px #3281ff solid;
+}
+input {
+  border: 1px #ddd solid;
+  border-radius: 4px;
+  height: 42px;
+  padding: 10px;
+  width: 100%;
+  transition: .1s linear;
+  outline: none;
+}
+textarea {
+  border: 1px #ddd solid;
+  border-radius: 4px;
+  height: 130px;
+  padding: 10px;
+  width: 100%;
+  outline: none;
+}
+.content {
+  margin: auto;
+  width: 50%;
+}
+.form-block {
+  padding: 10px;
+}
+.btn-submit {
+  background: #3281ff;
+  color: #fff;
+  height: 50px;
+  font-size: 16px;
+  &:hover {
+    opacity: 0.8;
+    color: #fff; 
+  }
+}
+h4 {
+  font-weight: 200;
+  color: #555; 
+  line-height: 1.5;
+}
+h3 {
+  font-weight: 600;
+  font-size: 18px;
+}
+b{
+  color: #ff3172;
+  font-weight: 400;
+}
