--- a/app/views/blessings/add_question.html.erb
+++ b/app/views/blessings/add_question.html.erb
@@ -1,7 +1,21 @@
-你希望志軒怎麼樣記住你？留下什麼印象？<br>
-這是給志軒的解謎禮物，請留下一個解答會是<b>「<%= "#{@blessing.nickname}" %>」</b>的問題！<br>
-例：聽到寵物就會不能自我、心花怒放地尖叫，在貝殼內堅持捍衛寵物日到底的人是誰？
-<%= simple_form_for @blessing do |f| %>
-	請問，<%= f.input_field :question %>？<br>
-	<%= f.button :submit %>
-<% end %>
+<div class="wrap">
+  <div class="content">
+  <div class="form-block">
+    <h3>
+      你希望志軒怎麼樣記住你？留下什麼印象？<br><br>
+    </h3>
+    <h4>
+      這是給志軒的解謎禮物，請留下一個解答會是<b>「<%= "#{@blessing.nickname}" %>」</b>的問題！<br>
+      <b>例：聽到寵物就會不能自我、心花怒放地尖叫，在貝殼內堅持捍衛寵物日到底的人是誰？</b>
+    </h4>
+  </div>
+  <%= simple_form_for @blessing do |f| %>
+    <div class="form-block">
+    	<h4>我的問題</h4><%= f.input_field :question %><br>
+    </div>
+    <div class="form-block">
+    	<%= f.button :submit, "好的，送出！", class:"btn-submit" %>
+    </div>
+  <% end %>
+ 
+</div>
