Add error controlling and done page

--- a/app/assets/stylesheets/blessings.scss
+++ b/app/assets/stylesheets/blessings.scss
@@ -47,19 +47,29 @@ textarea {
   font-size: 16px;
   &:hover {
     opacity: 0.8;
-    color: #fff; 
+    color: #fff;
   }
 }
 h4.ques-title{
   font-weight: 200;
-  color: #555; 
-  line-height: 1.5;
+  color: #555;
+  line-height: 1.5 !important;
 }
 h3 {
-  font-weight: 600;
-  font-size: 17px;
+  font-weight: 400;
+  font-size: 18px;
 }
 b{
   color: #ff3172;
   font-weight: 400;
+}
+.error {
+  color: red;
+}
+.question-wrap {
+  display: flex;
+  align-items: center;
+  span {
+    font-size: 22px;
+  }
 }
