--- a/app/views/blessings/done.html.erb
+++ b/app/views/blessings/done.html.erb
@@ -2,6 +2,10 @@
   <div class="content">
     <div class="form-block">
       <h3>賀啦，感謝你的合作～</h3>
+      <p>我們會把你的祝福傳到他手上der！前提是他要先答對你的問題 A_A</p>
+      <div class="image-wrapper">
+      	<%= image_tag 'zxuan_thanks.png' %>
+      </div>
     </div>
   </div>
 </div>
