--- a/app/views/blessings/done.html.erb
+++ b/app/views/blessings/done.html.erb
@@ -1,5 +1,5 @@
 <div class="wrap">
-  <div class="content">
+  <div class="col-md-6 col-md-offset-3 col-sm-12 col-xs-12">
     <div class="form-block">
       <h3>賀啦，感謝你的合作～</h3>
       <p>我們會把你的祝福傳到他手上der！前提是他要先答對你的問題 A_A</p>
