--- a/app/views/blessings/add_question.html.erb
+++ b/app/views/blessings/add_question.html.erb
@@ -1,5 +1,5 @@
 <div class="wrap">
-  <div class="content">
+  <div class="col-md-6 col-md-offset-3 col-sm-12 col-xs-12">
   <div class="form-block">
     <h3>
       你希望志軒怎麼樣記住你？留下什麼印象？<br><br>
