--- a/app/views/blessings/new.html.erb
+++ b/app/views/blessings/new.html.erb
@@ -1,5 +1,5 @@
 <div class="wrap">
-  <div class="content">
+  <div class="col-md-6 col-md-offset-3 col-sm-12 col-xs-12">
   <div class="form-block">
     <h3>
       這是給志軒的話唷！
