fix css, mix all into one form

--- a/app/assets/stylesheets/blessings.scss
+++ b/app/assets/stylesheets/blessings.scss
@@ -11,7 +11,8 @@ body {
 .wrap {
   padding: 30px;
   background: #eee;
-  height: 100vh;
+  height: 100%;
+  overflow: hidden;
 }
 
 input:focus, textarea:focus {
