--- a/app/views/blessings/new.html.erb
+++ b/app/views/blessings/new.html.erb
@@ -1,12 +1,12 @@
 <div class="wrap">
   <div class="col-md-6 col-md-offset-3 col-sm-12 col-xs-12">
-  <div class="form-block">
-    <h3>
-      這是給志軒的話唷！
-    </h3>
-    <p>志軒只待到明天了ＱＱ，大家請快寫兒</p>
-  </div>
-  <%= simple_form_for @blessing do |f| %>
+    <div class="form-block">
+      <h3>
+        這是給志軒的話唷！
+      </h3>
+      <p>志軒只待到明天了ＱＱ，大家請快寫兒</p>
+    </div>
+    <%= simple_form_for @blessing do |f| %>
     <div class="form-block">
     	<h4 class="ques-title">請上傳一張你的照片</h4>
       <%= f.error :photo %>
@@ -22,9 +22,24 @@
       <%= f.error :content %>
       <%= f.input_field :content %><br>
     </div>
+    <hr>
     <div class="form-block">
-  	 <%= f.button :submit, "繼續填，還有下一頁", class:"btn-submit" %>
+      <h3>
+        你希望志軒怎麼樣記住你？留下什麼印象？<br><br>
+      </h3>
+      <h4 class="ques-title">
+        這是給志軒的解謎禮物，請留下一個解答會是<b>「<%= "#{@blessing.nickname}" %>」</b>的問題！<br>
+        <b>例：聽到寵物就會不能自我、心花怒放地尖叫，在貝殼內堅持捍衛寵物日到底的人是誰？</b>
+      </h4>
     </div>
-  <% end %>
+    <div class="form-block">
+      <h4>我的問題</h4>
+      <%= f.error :question %>
+      <div class="question-wrap"><%= f.input_field :question %><span>？</span></div><br>
+    </div>
+    <div class="form-block">
+      <%= f.button :submit, "確認送出", class:"btn-submit" %>
+    </div>
+    <% end %>
   </div>
 </div>
