add disable with

--- a/app/views/blessings/new.html.erb
+++ b/app/views/blessings/new.html.erb
@@ -38,7 +38,7 @@
       <div class="question-wrap"><%= f.input_field :question %><span>？</span></div><br>
     </div>
     <div class="form-block">
-      <%= f.button :submit, "確認送出", class:"btn-submit" %>
+      <%= f.button :submit, "確認送出", data: { disable_with: '送出送出送出ㄌ' }, class:"btn-submit" %>
     </div>
     <% end %>
   </div>
