add better description

--- a/app/views/blessings/new.html.erb
+++ b/app/views/blessings/new.html.erb
@@ -28,7 +28,7 @@
         你希望志軒怎麼樣記住你？留下什麼印象？<br><br>
       </h3>
       <h4 class="ques-title">
-        這是給志軒的解謎禮物，請留下一個解答會是 <b id="you">你</b> 的問題！<br>
+        這是給志軒的解謎禮物，請留下一個解答會是 <b id="you">你</b> ，屬於你最具代表性的問題！<br>
         <b>例：聽到寵物就會不能自我、心花怒放地尖叫，在貝殼內堅持捍衛寵物日到底的人是誰？</b>
       </h4>
     </div>
