--- a/app/views/blessings/new.html.erb
+++ b/app/views/blessings/new.html.erb
@@ -26,15 +26,20 @@
     <hr>
     <div class="form-block">
       <h3>
-        你希望志軒怎麼樣記住你？留下什麼印象？<br><br>
+        你希望志軒怎麼樣記住你？什麼問題最能代表你？<br><br>
       </h3>
       <h4 class="ques-title">
-        什麼問題最能代表你？這是給志軒的解謎禮物，請留下一個解答會是 <b id="you">你</b> ，屬於你最具代表性的問題！<br>
-        <b>例：聽到寵物就會不能自我、心花怒放地尖叫，在貝殼內堅持捍衛寵物日到底的人是誰？</b>
+        這是給志軒的解謎禮物，請留下一個解答會是 <b id="you">你</b> ，屬於你<b>最具代表性的問題！</b><br>
+        <br>
+        例：如果是海淨的話他就可以寫「提到寵物就會不能自我、心花怒放地尖叫，在貝殼內堅持捍衛寵物日的人是誰？」
+        <br>
+        <small>答案就會是海淨本人</small>
       </h4>
+      <br>
+      <h3 class="ques-title">那你呢？</h3>
     </div>
     <div class="form-block">
-      <h4>我的問題</h4>
+      <h4 class="ques-title">我的問題是：</h4>
       <%= f.error :question %>
       <div class="question-wrap"><%= f.input_field :question %><span>？</span></div><br>
     </div>
