--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
 <head>
   <title>Missionz</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+  <meta content="https://i.imgur.com/8BOmHBN.jpg" property="og:image">
+  <link href="http://phate.io/assets/favicon/favicon-8a6a7c3c01cd72c37d53b85e144c127ca41523d34351bbc85b38ad452fca9a59.ico" rel="shortcut icon">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= stylesheet_link_tag params[:controller] %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
