--- a/app/views/blessings/solve.js.erb
+++ b/app/views/blessings/solve.js.erb
@@ -2,6 +2,7 @@ $('#pop .content').removeClass('show')
 $('#pop-result').html('<%= j render "blessings/partials/result" %>');
 $('#pop-result').addClass('show');
 <% if @blessing.solved? %>
+	$('#blessing_<%= @blessing.id %>').html('<%= j render partial: "blessings/partials/card", locals: { blessing: @blessing } %>')
 	$('#blessing_<%= @blessing.id %>').addClass('you-are-right');
 <% end %>
 $('body').css('overflow', 'hidden')
