--- a/app/views/blessings/quiz.html.erb
+++ b/app/views/blessings/quiz.html.erb
@@ -3,7 +3,7 @@
     <div class="pg-bar">
       <h2>你已解完<b><%= Blessing.solved.count %></b>張票，還剩<b><%= Blessing.unsolved.count %></b>張！</h2>
       <div class="pg-main">
-        <div class="pg-body"></div>
+        <div class="pg-body" style="width: <%= "#{(Blessing.solved.count.to_f/Blessing.count.to_f)*100}%" %> "></div>
       </div>
     </div>
   </header>
