--- a/app/views/blessings/new.html.erb
+++ b/app/views/blessings/new.html.erb
@@ -5,7 +5,7 @@
         一同祝福志軒！這是給志軒的留言唷！
       </h3>
       <p>志軒即將離開貝殼去創業，開闢他在音樂產業的一片天<br>
-      啊他只待到明天了ＱＱ，一起來留下對他的祝福吧～</p>
+      啊他只待到今天了ＱＱ，一起來留下對他的祝福吧～</p>
     </div>
     <%= simple_form_for @blessing do |f| %>
     <div class="form-block">
